feat: Introduce new About Us, Contact, and Home pages with dedicated styles and assets, and update workshops and products pages.

--- a/products.html
+++ b/products.html
@@ -63,13 +63,13 @@
                         <a class="nav-link active" href="products.html">Products</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="aboutus.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="workshops.html">Workshops</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
                 <div class="nav-icons d-flex align-items-center gap-3">
@@ -1226,10 +1226,10 @@
                 <div class="col-lg-2 col-md-6">
                     <h6 class="footer-title">Quick Links</h6>
                     <a href="index.html" class="footer-link">Home</a>
-                    <a href="#" class="footer-link">About Us</a>
+                    <a href="aboutus.html" class="footer-link">About Us</a>
                     <a href="products.html" class="footer-link">Products</a>
                     <a href="workshops.html" class="footer-link">Workshops</a>
-                    <a href="#" class="footer-link">Contact Us</a>
+                    <a href="contact.html" class="footer-link">Contact Us</a>
                 </div>
                 
                 <!-- Customer Service -->
